--- a/src/igu/PrecioVentaIGU.form
+++ b/src/igu/PrecioVentaIGU.form
@@ -146,8 +146,14 @@
     <Component class="javax.swing.JTextField" name="txtCostoArticulo">
     </Component>
     <Component class="javax.swing.JTextField" name="txtGanacia">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtPrecioAVender">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtMontoGanar">
     </Component>
